updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student in Coding Bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Odesa, Ukrain</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading and walking my dog</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Not sure!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Anywhere but Seattle.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I need to learn new skills to further my career.</p>
     </section>
 
     <footer id="footer">
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
